# uefi-shell

./: .editorconfig  .gitignore  Cargo.toml  Makefile  README.md  deny.toml  rust-toolchain.toml  rustfmt.toml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: ci.yml
scripts/: deps.sh  git-hooks.sh
scripts/hooks/: pre-commit.sh
src/: data_types.rs  main.rs  protocol.rs  status.rs
src/proto/: dynamic.rs  mod.rs  parameters.rs  shell.rs
