[package]
name = "uefi-shell"
version = "0.0.1"
edition = "2021"
license = "GPL-3.0-only"
description = "UEFI Shell application"
repository = "https://github.com/crawfxrd/uefi-shell"
keywords = ["uefi"]
categories = ["embedded", "no-std"]
publish = false

[profile.dev]
debug = 0
lto = true
opt-level = 1
panic = "abort"

# Issue: https://github.com/rust-lang/compiler-builtins/issues/347
[profile.dev.package.compiler_builtins]
overflow-checks = false
debug-assertions = false

[profile.release]
debug = 0
lto = true
panic = "abort"

[dependencies]
uefi = "0.14.0"
uefi-services = "0.11.0"
